errors

gstvideobalance.c: In function ‘gst_video_balance_plugin_transform_ip’:
gstvideobalance.c:97:28: warning: unused variable ‘plugin’ [-Wunused-variable]
   97 |     GstVideoBalancePlugin *plugin = GST_VIDEO_BALANCE_PLUGIN(trans);
      |                            ^~~~~~
In file included from /usr/include/gstreamer-1.0/gst/gstelementfactory.h:38,
                 from /usr/include/gstreamer-1.0/gst/gstelement.h:226,
                 from /usr/include/gstreamer-1.0/gst/gstbin.h:27,
                 from /usr/include/gstreamer-1.0/gst/gst.h:35,
                 from gstvideobalance.c:1:
gstvideobalance.c: At top level:
/usr/include/gstreamer-1.0/gst/gstplugin.h:268:3: error: ‘PACKAGE’ undeclared here (not in a function)
  268 |   PACKAGE, \
      |   ^~~~~~~
gstvideobalance.c:155:1: note: in expansion of macro ‘GST_PLUGIN_DEFINE’
  155 | GST_PLUGIN_DEFINE(GST_VERSION_MAJOR, GST_VERSION_MINOR, videobalance, "Video balance plugin", gst_video_balance_plugin_register, "1.0", "LGPL", "GStreamer", "http://gstreamer.net/")
      | ^~~~~~~~~~~~~~~~~
